# spaceship-logistics-analytics

./: .gitignore  AI_USAGE.md  README.md
backend/: .env.example  nixpacks.toml  pyproject.toml  railway.toml
backend/app/: config.py  data.py  main.py  registry.py  schemas.py
backend/app/api/: ask.py  charts.py  kpis.py
backend/app/llm/: client.py  orchestrator.py  prompt.py
backend/app/tools/: forecast.py  query_metric.py
backend/tests/: conftest.py  test_smoke.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/ask/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: AskEmptyState.tsx  ChartCard.tsx  ChartRenderer.tsx  ConcentrationChart.tsx  DataTable.tsx  ForecastChart.tsx  ForecastPlanCard.tsx  KpiTile.tsx  PlanPanel.tsx  ResponseSkeleton.tsx
frontend/src/lib/: api.ts  format.ts  useIsMobile.ts
